# intel_ark_specscrapper

./: README.md  __init__.py
agents/intel_ark/: fields.yaml
core/: schema.py
specagents/: README.md  README_STRUCTURE.md  pyproject.toml  requirements.txt
specagents/agents/intel_ark/: agent.py  fetcher.py  fields.yaml
specagents/core/: base_agent.py  derive.py
