[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "specagents"
version = "0.0.1"
description = "Competitive specification scraping for Intel Xeon datacenter processors"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "PyYAML>=6.0",          # parse agents/*/fields.yaml
]

[project.optional-dependencies]
# installed as we build later layers: pip install -e ".[fetch]" etc.
fetch = ["httpx>=0.27"]     # OData / ARK client
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["specagents*"]
